# bayesian-haskell

./: Main.hs  README.md  bayestest.cabal  display.py  stack.yaml
