name:                bayestest
version:             0.1.0
license:             Apache-2.0
build-type:          Simple
cabal-version:       >=1.10

executable bayes
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base,
                       monad-bayes,
                       Chart,
                       Chart-diagrams,
                       log-domain,
                       cassava,
                       bytestring

